# sim-skills

./: .gitignore  CLAUDE.md  CLI_REFERENCE.md  README.md  pyproject.toml  spec-tjut-thesis-new.md  spec-tjut-thesis.md
.claude/skills/: SKILLS_OVERVIEW.md
.claude/skills/__libs__/: soffice.py  spec_validation.py  thesis_profiles.py  utils.py
.claude/skills/agent-check-report/: SKILL.md
.claude/skills/batch-check/: REFERENCE.md  SKILL.md
.claude/skills/check-thesis/: REFERENCE.md  SKILL.md  rule-checker-prompt.md  semantic-checker-prompt.md
.claude/skills/compare-docs/: SKILL.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/evaluate-spec/: SKILL.md  evaluator-prompt.md
.claude/skills/extract-spec/: SKILL.md  font-extractor-prompt.md  heading-extractor-prompt.md  layout-extractor-prompt.md  quality-rules.md  unified-extractor-prompt.md
.claude/skills/infer-spec-fragment/: SKILL.md
.claude/skills/inspect-word-xml/: SKILL.md
.claude/skills/merge-spec-fragments/: SKILL.md
docs/: 00-背景与机会.md  01-产品设计.md  02-MVP 设计.md  02-MVP设计.md  02-实施方案.md  03-MVP 实施方案.md  03-MVP实施方案.md  03-MVP设计.md  04-MVP实施方案.md  04-Spec-Schema 草案.md  04-Spec-Schema草案.md  05-后续迭代优先级.md  06-Spec-Schema草案.md  07-ArtifactIR与DocumentIR草案.md  08-开发策略说明.md
sim_docs/: README.md  __init__.py  __main__.py  api.py  check_engine.py  cli.py  compare_engine.py  docx_parser.py  pdf_engine.py  service.py  spec_engine.py  stats_engine.py  text_sources.py  thesis_profiles.py  utils.py
sim_docs/adapters/: __init__.py  word.py
sim_docs/analysis/: checks.py  stats.py
sim_docs/cli/: __init__.py  main.py
sim_docs/core/: cache.py  helpers.py  io.py  paths.py
sim_docs/pdf/: extract.py
sim_docs/spec/: engine.py  rules.py
sim_docs/tests/: __init__.py  test_cache.py  test_spec_engine.py  test_stats_engine.py
sim_docs/word/: adapter.py  inspect.py  models.py  parser.py  render.py
(+96 files in other folders)
