[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-skills"
version = "0.2.0"
description = "Document parsing, checking, and formatting compliance toolkit"
requires-python = ">=3.10"
dependencies = [
  "python-docx>=0.8.11",
  "defusedxml>=0.7.1",
  "lxml>=4.9.0",
]

[project.optional-dependencies]
render = ["PyMuPDF>=1.23.0"]

[project.scripts]
sim-docs = "sim_docs.cli.main:main"

[tool.setuptools]
packages = ["sim_docs", "sim_docs.core", "sim_docs.word", "sim_docs.word.validate", "sim_docs.pdf", "sim_docs.text", "sim_docs.analysis", "sim_docs.spec", "sim_docs.cli", "sim_docs.cli.commands"]

[tool.setuptools.package-data]
sim_docs = ["word/validate/schemas/**/*.xsd"]

# Usage:
#   pip install -e .                  # Install package
#   pip install -e ".[render]"        # Install with PyMuPDF for page rendering
#   python3 -m sim_docs parse file.docx
#   python3 -m sim_docs check --schema
#   python3 -m sim_docs validate file.docx --auto-repair